<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/lbl_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_list_app"
        android:layout_below="@id/lbl_app"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_method"
        android:layout_below="@id/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/google_sign_in"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="10dp"
            android:layout_marginVertical="8dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/google_login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/sign_in_with_google"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_facebook_sign"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/blue_facebook"
            android:layout_marginVertical="8dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/facebook_ico"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/sign_in_facebook"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>